@@ -38,6 +38,8 @@
     <string name="good_morning">GOEIEMORGEN</string>
     <string name="good_day">GENIET VAN JE DAG!</string>
     <string name="good_evening">FIJNE AVOND :)</string>
+    <string name="done">Klaar</string>
+    <string name="skip">Overslaan</string>
     <string name="wake_up">WAKKER WORDEN</string>
     <string name="get_up">OPSTAAN</string>
     <string name="shower">DOUCHEN</string>
