@@ -7,6 +7,7 @@ Streak: 2
 Learned:
 Did:
     - Fix icon (xml) for Cosmeticism button. Colours are hardcoded, but same is true for pngs. Confirmed working on iOS.
+    - Start prototyping a ChecklistSubMenu composable for the DayPartMenu buttons.
 
 5-12-2024
 Streak: 1
